cmake_minimum_required(VERSION 3.23)
project(cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(cpp main.cpp 1-say-hello-world-with-cpp.cpp 2-input-and-output.cpp 3-basic-data-types.cpp 4-conditional-statements.cpp 5-for-loop.cpp 6-functions.cpp 7-pointer.cpp 8-arrays-introduction.cpp 9-variable-sized-arrays.cpp 10-string-stream.cpp 11-strings.cpp 12-structs.cpp 13-class.cpp 14-classes-and-objects.cpp 15-inherited-code.cpp 16-exceptional-server.cpp 17-virtual-functions.cpp 18-vector-sort.cpp 19-vector-erase.cpp 20-rectangle-area.cpp 21-multi-level-inheritance.cpp)
